--- a/_includes/lesson_footer.html
+++ b/_includes/lesson_footer.html
@@ -27,7 +27,7 @@
 	by <a href="{{ site.carpentries_site }}">The Carpentries</a>
 	{% endif %}-->
 	Licensed under <a href="{{ site.cc_by_human }}">CC-BY-NC-SA 4.0</a> 2018–{{ 'now' | date: "%Y" }}
-	by Seyong Kim and <a href="{{ site.sa2c_site }}">Swansea Academy of Advanced Computing</a>
+	by Jarno Rantaharju, Seyong Kim and <a href="{{ site.sa2c_site }}">Swansea Academy of Advanced Computing</a>
 	    </br>
 			Includes Materials from  <a href="{{ site.cris_site }}"> Christopher Woods</a>
 		</div>
