Change license in footer to cc-by-sa

--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -17,10 +17,8 @@
 	<a href="{{ site.carpentries_site }}">The Carpentries</a>
   {% endif %}
         -->
-        Licensed under <a href="{{ site.cc_by_human }}">CC-BY-NC-SA 4.0</a> 2018–{{ 'now' | date: "%Y" }}
+        Licensed under <a href="{{ site.cc_by_human }}">CC-BY-SA 4.0</a> 2018–{{ 'now' | date: "%Y" }}
         by Jarno Rantaharju, Seyong Kim and and <a href="{{ site.sa2c_site }}">Swansea Academy of Advanced Computing</a>      
-	      </br>
-			  Includes Materials from  <a href="{{ site.chris }}"> Christopher Woods</a>
       </h4>
     </div>
     <div class="col-md-6" align="right">
