Add Ed to authors

--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -18,7 +18,7 @@
   {% endif %}
         -->
         Licensed under <a href="{{ site.cc_by_human }}">CC-BY-SA 4.0</a> 2018–{{ 'now' | date: "%Y" }}
-        by Jarno Rantaharju, Seyong Kim and and <a href="{{ site.sa2c_site }}">Swansea Academy of Advanced Computing</a>      
+        by Jarno Rantaharju, Seyong Kim, Ed Bennett and and <a href="{{ site.sa2c_site }}">Swansea Academy of Advanced Computing</a>      
       </h4>
     </div>
     <div class="col-md-6" align="right">
