--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -6,6 +6,7 @@ layout: base
 <article>
 {% include episode_title.html %}
 {% include episode_overview.html %}
+{% include language-choice.html %}
 {{content}}
 {% include episode_keypoints.html %}
 </article>
