--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -8,6 +8,8 @@
 {% assign carpentry = 'Library Carpentry' %}
 {% elsif site.carpentry == 'cp' %}
 {% assign carpentry = 'The Carpentries' %}
+{% elsif site.carpentry == 'sa2c' %}
+{% assign carpentry = 'SA2C' %}
 {% endif %}
 
     <!-- Favicons for everyone -->
