--- a/assets/css/lesson.scss
+++ b/assets/css/lesson.scss
@@ -155,6 +155,11 @@ blockquote p {
     margin: 5px;
 }
 
+.noborder {
+  padding: 0;
+  border: 0;
+}
+
 //----------------------------------------
 // Override Bootstrap settings.
 //----------------------------------------
