use instead KTH logo, replace in navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -37,7 +37,7 @@
       </a>
       {% elsif site.carpentry == "pdc" %}
       <a href="{{ site.pdc_site }}" class="pull-left">
-        <img class="navbar-logo" src="{{ relative_root_path }}{% link /assets/img/pdc_logo.png %}" alt="The PDC logo" />
+        <img class="navbar-logo" src="{{ relative_root_path }}{% link /assets/img/KTH_Logotyp_RGB_2013.png %}" alt="The PDC logo" />
       </a>
       {% endif %}
 
