use PDC favicons

--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -10,6 +10,8 @@
 {% assign carpentry = 'The Carpentries' %}
 {% elsif site.carpentry == 'sa2c' %}
 {% assign carpentry = 'SA2C' %}
+{% elsif site.carpentry == 'pdc' %}
+{% assign carpentry = 'PDC' %}
 {% endif %}
 
     <!-- Favicons for everyone -->
