add togglable python tab, with python discussion and exercises

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -32,6 +32,13 @@ Toggle between showing code in different languages using a show-language class
       $(".show-fortran").hide()
     }
     localStorage.setItem('show-fortran', $("#show_fortran_checkbox")[0].checked);
+
+    if ($("#show_python_checkbox")[0].checked == true){
+      $(".show-python").show()
+    } else {
+      $(".show-python").hide()
+    }
+    localStorage.setItem('show-python', $("#show_python_checkbox")[0].checked);
   }
   
   //Load the checkbox states from local storage and apply
@@ -40,6 +47,9 @@ Toggle between showing code in different languages using a show-language class
   }
   if(localStorage.getItem("show-fortran") == "true"){
     $("#show_fortran_checkbox").prop('checked', true);
+  }
+  if(localStorage.getItem("show-python") == "true"){
+    $("#show_python_checkbox").prop('checked', true);
   }
   toggle_code_display();
 </script>
