--- a/_includes/language-choice.html
+++ b/_includes/language-choice.html
@@ -13,6 +13,7 @@
             <tr>
                 <td><label> <input type="checkbox" id="show_c_checkbox" onclick="toggle_code_display()"> Show C </label></td>
                 <td><label> <input type="checkbox" id="show_fortran_checkbox" onclick="toggle_code_display()"> Show Fortran </label></td>
+                <td><label> <input type="checkbox" id="show_python_checkbox" onclick="toggle_code_display()"> Show Python</label></td>
             </tr>
     </tbody>
 </table>
