Fixed Python tab

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -48,6 +48,9 @@ Toggle between showing code in different languages using a show-language class
   if(localStorage.getItem("show-fortran") == "true"){
     $("#show_fortran_checkbox").prop('checked', true);
   }
+  if(localStorage.getItem("show-python") == "true"){
+    $("#show_python_checkbox").prop('checked', true);
+  }
   toggle_code_display();
 </script>
   
