--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,6 +39,9 @@
       <a href="{{ site.pdc_site }}" class="pull-left">
         <img class="navbar-logo" src="{{ relative_root_path }}{% link /assets/img/KTH_Logotyp_RGB_2013.png %}" alt="The PDC logo" />
       </a>
+      <a href="{{ site.prace_site }}" class="pull-left">
+        <img class="navbar-logo" src="{{ relative_root_path }}{% link /assets/img/prace-mini.jpeg %}" alt="The PRACE logo" />
+      </a>
       {% endif %}
 
       {% comment %} Always show link to home page. {% endcomment %}
